--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,7 +1,10 @@
 <!-- public/admin/sidebar.html -->
-<aside class="w-64 min-h-screen bg-gray-900 text-white shadow-lg fixed top-0 left-0">
-  <div class="flex items-center justify-between p-4 border-b border-gray-700">
-    <h1 class="text-xl font-bold tracking-tight">YourSaaS</h1>
+<!-- Include Lucide Icons -->
+<script src="https://unpkg.com/lucide@latest"></script>
+
+<aside class="w-64 min-h-screen bg-white text-gray-800 shadow-lg fixed top-0 left-0 border-r border-gray-200">
+  <div class="flex items-center justify-between p-4 border-b border-gray-200">
+    <h1 class="text-xl font-bold tracking-tight text-gray-900">YourSaaS</h1>
     <!-- Add Booking Button -->
     <button class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-4 py-2 rounded transition">
       + Add Booking
@@ -9,31 +12,57 @@
   </div>
 
   <nav class="mt-4 px-4">
-    <ul class="space-y-2 text-sm font-medium">
+    <ul class="space-y-1 text-sm font-medium">
+
       <!-- Main Navigation -->
-      <li><a href="/admin/dashboard" class="block py-2 px-3 rounded hover:bg-gray-800">Dashboard</a></li>
-      <li><a href="/admin/calendar" class="block py-2 px-3 rounded hover:bg-gray-800">Calendar View</a></li>
-      <li><a href="/admin/listing" class="block py-2 px-3 rounded hover:bg-gray-800">Listing View</a></li>
-      <li><a href="/admin/map" class="block py-2 px-3 rounded hover:bg-gray-800">Map View</a></li>
-      <li><a href="/admin/bookings" class="block py-2 px-3 rounded hover:bg-gray-800">Bookings</a></li>
-      <li><a href="/admin/leads" class="block py-2 px-3 rounded hover:bg-gray-800">Leads</a></li>
-      <li><a href="/admin/customers" class="block py-2 px-3 rounded hover:bg-gray-800">Customers</a></li>
-      <li><a href="/admin/providers" class="block py-2 px-3 rounded hover:bg-gray-800">Providers</a></li>
-      <li><a href="/admin/hiring" class="block py-2 px-3 rounded hover:bg-gray-800">Hiring</a></li>
-      <li><a href="/admin/marketing" class="block py-2 px-3 rounded hover:bg-gray-800">Marketing</a></li>
-      <li><a href="/admin/reports" class="block py-2 px-3 rounded hover:bg-gray-800">Reports</a></li>
-      <li><a href="/admin/logs" class="block py-2 px-3 rounded hover:bg-gray-800">Logs</a></li>
+      <li><a href="/admin/dashboard" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="layout-dashboard" class="w-4 h-4"></i> Dashboard</a></li>
+      <li><a href="/admin/calendar" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="calendar" class="w-4 h-4"></i> Calendar View</a></li>
+      <li><a href="/admin/listing" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="list" class="w-4 h-4"></i> Listing View</a></li>
+      <li><a href="/admin/map" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="map" class="w-4 h-4"></i> Map View</a></li>
+      <li><a href="/admin/bookings" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="book" class="w-4 h-4"></i> Bookings</a></li>
+      <li><a href="/admin/leads" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="user-plus" class="w-4 h-4"></i> Leads</a></li>
+      <li><a href="/admin/customers" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="users" class="w-4 h-4"></i> Customers</a></li>
+      <li><a href="/admin/providers" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="briefcase" class="w-4 h-4"></i> Providers</a></li>
+      <li><a href="/admin/hiring" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="handshake" class="w-4 h-4"></i> Hiring</a></li>
+      <li><a href="/admin/marketing" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="megaphone" class="w-4 h-4"></i> Marketing</a></li>
+      <li><a href="/admin/reports" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="bar-chart" class="w-4 h-4"></i> Reports</a></li>
+      <li><a href="/admin/logs" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="file-text" class="w-4 h-4"></i> Logs</a></li>
 
       <!-- Account & Settings -->
-      <li class="pt-4 text-gray-400 uppercase text-xs">Account</li>
-      <li><a href="/admin/settings" class="block py-2 px-3 rounded hover:bg-gray-800">Settings</a></li>
-      <li><a href="/admin/account" class="block py-2 px-3 rounded hover:bg-gray-800">General</a></li>
-      <li><a href="/admin/translation" class="block py-2 px-3 rounded hover:bg-gray-800">Translation</a></li>
-      <li><a href="/admin/design" class="block py-2 px-3 rounded hover:bg-gray-800">Design Forms & Website</a></li>
-      <li><a href="/admin/industries" class="block py-2 px-3 rounded hover:bg-gray-800">Industries</a></li>
-      <li><a href="/admin/staff" class="block py-2 px-3 rounded hover:bg-gray-800">Staff</a></li>
-      <li><a href="/admin/spots" class="block py-2 px-3 rounded hover:bg-gray-800">Booking Spots</a></li>
-      <li><a href="/admin/notifications" class="block py-2 px-3 rounded hover:bg-gray-800">Notifications</a></li>
+      <li class="pt-4 text-gray-500 uppercase text-xs tracking-wide">Account</li>
+
+      <li><a href="/admin/settings" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="settings" class="w-4 h-4"></i> Settings</a></li>
+      <li><a href="/admin/account" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="user-cog" class="w-4 h-4"></i> General</a></li>
+      <li><a href="/admin/translation" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="languages" class="w-4 h-4"></i> Translation</a></li>
+      <li><a href="/admin/design" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="pen-tool" class="w-4 h-4"></i> Design Forms & Website</a></li>
+      <li><a href="/admin/industries" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="building-2" class="w-4 h-4"></i> Industries</a></li>
+      <li><a href="/admin/staff" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="users-round" class="w-4 h-4"></i> Staff</a></li>
+      <li><a href="/admin/spots" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="map-pin" class="w-4 h-4"></i> Booking Spots</a></li>
+      <li><a href="/admin/notifications" class="flex items-center gap-2 py-2 px-3 rounded hover:bg-gray-100">
+        <i data-lucide="bell" class="w-4 h-4"></i> Notifications</a></li>
     </ul>
   </nav>
 </aside>
+
+<script>
+  lucide.createIcons(); // Load all Lucide icons after the page loads
+</script>
