--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -2,7 +2,7 @@
 <aside class="fixed top-0 left-0 h-full w-64 bg-white border-r border-gray-200 shadow-md z-40 flex flex-col">
   <!-- Header -->
   <div class="flex items-center justify-between p-4 border-b border-gray-200">
-    <h1 id="bizName" class="text-xl font-bold text-gray-900">TidyZenic</h1>
+    <h1 id="bizName" class="text-xl font-bold text-gray-900">LADYGREENER</h1>
     <button class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1.5 rounded">
       + Booking
     </button>
@@ -12,12 +12,14 @@
   <nav class="flex-1 overflow-y-auto p-4">
     <ul class="space-y-1 text-sm text-gray-800">
 
-      <!-- Bookings (dropdown) -->
+      <!-- Bookings Dropdown -->
       <li>
-        <button class="w-full flex justify-between items-center px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+        <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
           <span class="flex items-center gap-2">📅 Bookings</span>
-          <svg class="w-4 h-4 transition-transform duration-200" fill="none" stroke="currentColor" stroke-width="2"
-               viewBox="0 0 24 24"><path d="M6 9l6 6 6-6"/></svg>
+          <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+               stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M6 9l6 6 6-6" />
+          </svg>
         </button>
         <ul class="dropdown-menu hidden ml-4 space-y-1">
           <li><a href="/admin/bookings" class="block px-3 py-2 rounded hover:bg-gray-100">Booking List</a></li>
@@ -39,15 +41,17 @@
       <li><a href="/admin/hiring" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🤝 Hiring</a></li>
       <li><a href="/admin/staff" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">👥 Staff</a></li>
 
-      <!-- Marketing (dropdown) -->
+      <!-- Marketing Dropdown -->
       <li>
-        <button class="w-full flex justify-between items-center px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+        <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
           <span class="flex items-center gap-2">📣 Marketing</span>
-          <svg class="w-4 h-4 transition-transform duration-200" fill="none" stroke="currentColor" stroke-width="2"
-               viewBox="0 0 24 24"><path d="M6 9l6 6 6-6"/></svg>
+          <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+               stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M6 9l6 6 6-6" />
+          </svg>
         </button>
         <ul class="dropdown-menu hidden ml-4 space-y-1">
-          <li><a href="/admin/marketing" class="block px-3 py-2 rounded hover:bg-gray-100">Marketing Dashboard</a></li>
+          <li><a href="/admin/marketing" class="block px-3 py-2 rounded hover:bg-gray-100">Dashboard</a></li>
           <li><a href="/admin/campaigns" class="block px-3 py-2 rounded hover:bg-gray-100">Campaigns</a></li>
           <li><a href="/admin/ads" class="block px-3 py-2 rounded hover:bg-gray-100">Ad Manager</a></li>
           <li><a href="/admin/seo" class="block px-3 py-2 rounded hover:bg-gray-100">SEO Tools</a></li>
@@ -55,12 +59,14 @@
         </ul>
       </li>
 
-      <!-- AI Tools -->
+      <!-- AI Tools Dropdown -->
       <li>
-        <button class="w-full flex justify-between items-center px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+        <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
           <span class="flex items-center gap-2">🤖 AI Tools</span>
-          <svg class="w-4 h-4 transition-transform duration-200" fill="none" stroke="currentColor" stroke-width="2"
-               viewBox="0 0 24 24"><path d="M6 9l6 6 6-6"/></svg>
+          <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+               stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M6 9l6 6 6-6" />
+          </svg>
         </button>
         <ul class="dropdown-menu hidden ml-4 space-y-1">
           <li><a href="/admin/ai-assistant" class="block px-3 py-2 rounded hover:bg-gray-100">AI Assistant</a></li>
