--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -29,11 +29,12 @@
         </ul>
       </li>
 
-      
+      <!-- Clients -->
       <li><a href="/admin/customers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🧑 Customers</a></li>
       <li><a href="/admin/leads" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">👥 Leads</a></li>
       <li><a href="/admin/tags" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🏷️ CRM Tags</a></li>
 
+      <!-- Team -->
       <li><a href="/admin/providers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">💼 Providers</a></li>
       <li><a href="/admin/hiring" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🤝 Hiring</a></li>
       <li><a href="/admin/staff" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">👥 Staff</a></li>
@@ -72,16 +73,26 @@
         </ul>
       </li>
 
-      
+      <!-- Tools -->
       <li><a href="/admin/reports" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">📊 Reports</a></li>
       <li><a href="/admin/logs" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">📝 Activity Logs</a></li>
 
-      <!-- Settings -->
-      <li class="text-xs uppercase text-gray-500 font-semibold mt-4 mb-1">Settings</li>
-      <li><a href="/admin/account" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">⚙️ General Settings</a></li>
-      <li><a href="/admin/notifications" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🔔 Notifications</a></li>
-      <li><a href="/admin/design" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🎨 Appearance</a></li>
-      <li><a href="/admin/translation" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🌍 Languages</a></li>
+      <!-- Settings Dropdown -->
+      <li>
+        <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+          <span class="flex items-center gap-2">⚙️ Settings</span>
+          <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+               stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M6 9l6 6 6-6" />
+          </svg>
+        </button>
+        <ul class="dropdown-menu hidden ml-4 space-y-1">
+          <li><a href="/admin/account" class="block px-3 py-2 rounded hover:bg-gray-100">General Settings</a></li>
+          <li><a href="/admin/notifications" class="block px-3 py-2 rounded hover:bg-gray-100">Notifications</a></li>
+          <li><a href="/admin/design" class="block px-3 py-2 rounded hover:bg-gray-100">Appearance</a></li>
+          <li><a href="/admin/translation" class="block px-3 py-2 rounded hover:bg-gray-100">Languages</a></li>
+        </ul>
+      </li>
 
       <!-- Account -->
       <li class="text-xs uppercase text-gray-500 font-semibold mt-4 mb-1">Account</li>
