--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,33 +1,55 @@
 <!-- public/admin/sidebar.html -->
 <aside class="fixed top-0 left-0 h-full w-64 bg-white border-r border-gray-200 shadow-md z-40 flex flex-col">
   <!-- Header -->
-  <div class="flex items-center justify-between p-4 border-b border-gray-200">
-    <h1 id="bizName" class="text-xl font-bold text-gray-900">LADYGREENER</h1>
-    <button class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1.5 rounded">
-      + Booking
-    </button>
+<div class="flex items-center justify-between px-5 py-4 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm sticky top-0 z-50">
+  <!-- Business Logo + Name -->
+  <div class="flex items-center gap-3">
+    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="h-8 w-8 rounded-full object-cover" />
+    <h1 id="bizName" class="text-2xl font-semibold text-gray-800 tracking-tight">YourBusiness</h1>
   </div>
+
+  <!-- Call to Action -->
+  <button class="bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-700 hover:to-blue-600 text-white text-sm font-medium px-4 py-2 rounded-lg shadow-md transition-all duration-200">
+    + New Booking
+  </button>
+</div>
+
 
   <!-- Navigation -->
   <nav class="flex-1 overflow-y-auto p-4">
     <ul class="space-y-1 text-sm text-gray-800">
+<!-- Dashboard -->
+<li>
+  <a href="/admin/dashboard" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">
+    🏠 Dashboard
+  </a>
+</li>
 
-      <!-- Bookings Dropdown -->
-      <li>
-        <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
-          <span class="flex items-center gap-2">📅 Bookings</span>
-          <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
-               stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M6 9l6 6 6-6" />
-          </svg>
-        </button>
-        <ul class="dropdown-menu hidden ml-4 space-y-1">
-          <li><a href="/admin/bookings" class="block px-3 py-2 rounded hover:bg-gray-100">Booking List</a></li>
-          <li><a href="/admin/calendar" class="block px-3 py-2 rounded hover:bg-gray-100">Calendar View</a></li>
-          <li><a href="/admin/map" class="block px-3 py-2 rounded hover:bg-gray-100">Map View</a></li>
-          <li><a href="/admin/templates" class="block px-3 py-2 rounded hover:bg-gray-100">Booking Templates</a></li>
-        </ul>
-      </li>
+
+
+
+     <!-- Bookings Dropdown -->
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">📅 Bookings</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+         stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
+    <li><a href="/admin/bookings/upcoming" class="block px-3 py-2 rounded hover:bg-gray-100">🔜 Upcoming Bookings</a></li>
+    <li><a href="/admin/bookings/today" class="block px-3 py-2 rounded hover:bg-gray-100">📆 Today's Bookings</a></li>
+    <li><a href="/admin/bookings/unassigned" class="block px-3 py-2 rounded hover:bg-gray-100">🧩 Unassigned Bookings</a></li>
+    <li><a href="/admin/bookings/quotes" class="block px-3 py-2 rounded hover:bg-gray-100">💬 Quotes & Estimates</a></li>
+    <li><a href="/admin/bookings/cancellations" class="block px-3 py-2 rounded hover:bg-gray-100">❌ Cancellations</a></li>
+    <li><a href="/admin/bookings/history" class="block px-3 py-2 rounded hover:bg-gray-100">📖 Booking History</a></li>
+    <li><a href="/admin/bookings/drafts" class="block px-3 py-2 rounded hover:bg-gray-100">📝 Draft Bookings</a></li>
+    <li><a href="/admin/calendar" class="block px-3 py-2 rounded hover:bg-gray-100">🗓️ Calendar View</a></li>
+    <li><a href="/admin/map" class="block px-3 py-2 rounded hover:bg-gray-100">🗺️ Map View</a></li>
+  </ul>
+</li>
+
 
       <!-- Clients -->
       <li><a href="/admin/customers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🧑 Customers</a></li>
@@ -40,64 +62,131 @@
       <li><a href="/admin/staff" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">👥 Staff</a></li>
 
       <!-- Marketing Dropdown -->
-      <li>
-        <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
-          <span class="flex items-center gap-2">📣 Marketing</span>
-          <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
-               stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M6 9l6 6 6-6" />
-          </svg>
-        </button>
-        <ul class="dropdown-menu hidden ml-4 space-y-1">
-          <li><a href="/admin/marketing" class="block px-3 py-2 rounded hover:bg-gray-100">Dashboard</a></li>
-          <li><a href="/admin/campaigns" class="block px-3 py-2 rounded hover:bg-gray-100">Campaigns</a></li>
-          <li><a href="/admin/ads" class="block px-3 py-2 rounded hover:bg-gray-100">Ad Manager</a></li>
-          <li><a href="/admin/seo" class="block px-3 py-2 rounded hover:bg-gray-100">SEO Tools</a></li>
-          <li><a href="/admin/social" class="block px-3 py-2 rounded hover:bg-gray-100">Social Scheduler</a></li>
-        </ul>
-      </li>
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">📣 Marketing</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+         stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
+    <!-- Core Growth -->
+    <li><a href="/admin/marketing" class="block px-3 py-2 rounded hover:bg-gray-100">📊 Marketing Dashboard</a></li>
+    <li><a href="/admin/campaigns" class="block px-3 py-2 rounded hover:bg-gray-100">🎯 Campaign Builder</a></li>
+    <li><a href="/admin/automations" class="block px-3 py-2 rounded hover:bg-gray-100">⚙️ Automation Flows</a></li>
+    <li><a href="/admin/retargeting" class="block px-3 py-2 rounded hover:bg-gray-100">🎯 Retargeting & Funnels</a></li>
 
-      <!-- AI Tools Dropdown -->
-      <li>
-        <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
-          <span class="flex items-center gap-2">🤖 AI Tools</span>
-          <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
-               stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M6 9l6 6 6-6" />
-          </svg>
-        </button>
-        <ul class="dropdown-menu hidden ml-4 space-y-1">
-          <li><a href="/admin/ai-assistant" class="block px-3 py-2 rounded hover:bg-gray-100">AI Assistant</a></li>
-          <li><a href="/admin/ai-responses" class="block px-3 py-2 rounded hover:bg-gray-100">Smart Replies</a></li>
-          <li><a href="/admin/ai-generator" class="block px-3 py-2 rounded hover:bg-gray-100">Content Generator</a></li>
-        </ul>
-      </li>
+    <!-- Ads & Outreach -->
+    <li><a href="/admin/ads" class="block px-3 py-2 rounded hover:bg-gray-100">📢 Ad Manager</a></li>
+    <li><a href="/admin/sms" class="block px-3 py-2 rounded hover:bg-gray-100">📲 SMS Campaigns</a></li>
+    <li><a href="/admin/email" class="block px-3 py-2 rounded hover:bg-gray-100">📧 Email Blasts</a></li>
+    <li><a href="/admin/social" class="block px-3 py-2 rounded hover:bg-gray-100">📅 Social Scheduler</a></li>
+
+    <!-- SEO & Content -->
+    <li><a href="/admin/seo" class="block px-3 py-2 rounded hover:bg-gray-100">🔍 SEO Tools</a></li>
+    <li><a href="/admin/blog" class="block px-3 py-2 rounded hover:bg-gray-100">✍️ Blog & Content</a></li>
+
+    <!-- AI Boost -->
+    <li><a href="/admin/ai-marketing" class="block px-3 py-2 rounded hover:bg-gray-100">🤖 AI Copy Generator</a></li>
+    <li><a href="/admin/ai-audience" class="block px-3 py-2 rounded hover:bg-gray-100">🧠 Smart Audience Builder</a></li>
+
+    <!-- Insights -->
+    <li><a href="/admin/analytics" class="block px-3 py-2 rounded hover:bg-gray-100">📈 Campaign Analytics</a></li>
+    <li><a href="/admin/lead-tracking" class="block px-3 py-2 rounded hover:bg-gray-100">🕵️‍♂️ Lead Tracking</a></li>
+  </ul>
+</li>
+
+<!-- AI Tools Dropdown -->
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">🤖 AI Tools</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+         stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
+
+    <!-- Communication -->
+    <li><a href="/admin/ai-chatbot" class="block px-3 py-2 rounded hover:bg-gray-100">💬 AI Chatbot</a></li>
+    <li><a href="/admin/ai-responses" class="block px-3 py-2 rounded hover:bg-gray-100">⚡ Smart Replies (Email & SMS)</a></li>
+
+    <!-- Content & Campaigns -->
+    <li><a href="/admin/ai-campaigns" class="block px-3 py-2 rounded hover:bg-gray-100">🧠 Campaign Generator</a></li>
+    <li><a href="/admin/ai-content" class="block px-3 py-2 rounded hover:bg-gray-100">✍️ Content Creator (Posts, Ads, Blogs)</a></li>
+
+    <!-- Automation -->
+    <li><a href="/admin/ai-workflows" class="block px-3 py-2 rounded hover:bg-gray-100">⚙️ Workflow Builder</a></li>
+    <li><a href="/admin/ai-predict" class="block px-3 py-2 rounded hover:bg-gray-100">🔮 Smart Predictions (Leads, Cancellations)</a></li>
+
+    <!-- Personalization -->
+    <li><a href="/admin/ai-insights" class="block px-3 py-2 rounded hover:bg-gray-100">📈 Customer Insights</a></li>
+    <li><a href="/admin/ai-segmentation" class="block px-3 py-2 rounded hover:bg-gray-100">🧬 Auto Segmentation</a></li>
+
+  </ul>
+</li>
+
 
       <!-- Tools -->
       <li><a href="/admin/reports" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">📊 Reports</a></li>
       <li><a href="/admin/logs" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">📝 Activity Logs</a></li>
 
-      <!-- Settings Dropdown -->
-      <li>
-        <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
-          <span class="flex items-center gap-2">⚙️ Settings</span>
-          <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
-               stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M6 9l6 6 6-6" />
-          </svg>
-        </button>
-        <ul class="dropdown-menu hidden ml-4 space-y-1">
-          <li><a href="/admin/account" class="block px-3 py-2 rounded hover:bg-gray-100">General Settings</a></li>
-          <li><a href="/admin/notifications" class="block px-3 py-2 rounded hover:bg-gray-100">Notifications</a></li>
-          <li><a href="/admin/design" class="block px-3 py-2 rounded hover:bg-gray-100">Appearance</a></li>
-          <li><a href="/admin/translation" class="block px-3 py-2 rounded hover:bg-gray-100">Languages</a></li>
-        </ul>
-      </li>
+ <!-- Settings Dropdown -->
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">⚙️ Settings</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+         stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
 
-      <!-- Account -->
-      <li class="text-xs uppercase text-gray-500 font-semibold mt-4 mb-1">Account</li>
-      <li><a href="/admin/profile" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">👤 My Profile</a></li>
-      <li><a href="#" id="logoutBtn" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100 text-red-600">🚪 Logout</a></li>
+    <!-- General & Account -->
+    <li><a href="/admin/account" class="block px-3 py-2 rounded hover:bg-gray-100">🛠️ General Settings</a></li>
+    <li><a href="/admin/notifications" class="block px-3 py-2 rounded hover:bg-gray-100">🔔 Notifications & Alerts</a></li>
+    <li><a href="/admin/preferences" class="block px-3 py-2 rounded hover:bg-gray-100">⚙️ User Preferences</a></li>
+
+    <!-- Design & Branding -->
+    <li><a href="/admin/design" class="block px-3 py-2 rounded hover:bg-gray-100">🎨 Appearance & Branding</a></li>
+    <li><a href="/admin/domains" class="block px-3 py-2 rounded hover:bg-gray-100">🌐 Custom Domains</a></li>
+
+    <!-- Localization -->
+    <li><a href="/admin/translation" class="block px-3 py-2 rounded hover:bg-gray-100">🌍 Language & Translation</a></li>
+    <li><a href="/admin/timezones" class="block px-3 py-2 rounded hover:bg-gray-100">🕒 Timezones & Region</a></li>
+
+    <!-- Staff & Roles -->
+    <li><a href="/admin/staff" class="block px-3 py-2 rounded hover:bg-gray-100">👥 Staff & Roles</a></li>
+    <li><a href="/admin/business-hours" class="block px-3 py-2 rounded hover:bg-gray-100">⏰ Business Hours</a></li>
+
+    <!-- Advanced -->
+    <li><a href="/admin/forms" class="block px-3 py-2 rounded hover:bg-gray-100">📋 Forms & Intake Builder</a></li>
+    <li><a href="/admin/industries" class="block px-3 py-2 rounded hover:bg-gray-100">🏭 Industry Settings</a></li>
+    <li><a href="/admin/api-keys" class="block px-3 py-2 rounded hover:bg-gray-100">🔑 API & Webhooks</a></li>
+
+  </ul>
+</li>
+
+
+   <!-- Account Dropdown -->
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 mt-4 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">👤 Account</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+         stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
+    <li><a href="/admin/profile" class="block px-3 py-2 rounded hover:bg-gray-100">👤 My Profile</a></li>
+    <li><a href="/admin/billing" class="block px-3 py-2 rounded hover:bg-gray-100">💳 Billing & Invoices</a></li>
+    <li><a href="/admin/security" class="block px-3 py-2 rounded hover:bg-gray-100">🔐 Security Settings</a></li>
+    <li><a href="/admin/team-switch" class="block px-3 py-2 rounded hover:bg-gray-100">🔁 Switch Team</a></li>
+    <li><a href="#" id="logoutBtn" class="block px-3 py-2 rounded hover:bg-gray-100 text-red-600">🚪 Logout</a></li>
+  </ul>
+</li>
+
 
     </ul>
   </nav>
