Refactor Account section: dropdown with billing, security, and team switching

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,12 +1,16 @@
 <!-- public/admin/sidebar.html -->
 <aside class="fixed top-0 left-0 h-full w-64 bg-white border-r border-gray-200 shadow-md z-40 flex flex-col">
   <!-- Header -->
-<div class="flex items-center justify-between px-5 py-4 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm sticky top-0 z-50">
+<div class="flex items-center justify-between px-4 py-3 bg-white/90 backdrop-blur border-b border-gray-200 shadow-sm">
   <!-- Business Logo + Name -->
-  <div class="flex items-center gap-3">
-    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="h-8 w-8 rounded-full object-cover" />
-    <h1 id="bizName" class="text-2xl font-semibold text-gray-800 tracking-tight">YourBusiness</h1>
+  <div class="flex items-center gap-2">
+    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="h-7 w-7 rounded-full object-cover shadow-sm" />
+    <h1 id="bizName" class="text-base font-semibold text-gray-800 whitespace-nowrap overflow-hidden text-ellipsis">
+      YourBusiness
+    </h1>
   </div>
+</div>
+
 
   <!-- Call to Action -->
   <button class="bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-700 hover:to-blue-600 text-white text-sm font-medium px-4 py-2 rounded-lg shadow-md transition-all duration-200">
