--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,15 +1,18 @@
 <!-- public/admin/sidebar.html -->
 <aside class="fixed top-0 left-0 h-full w-64 bg-white border-r border-gray-200 shadow-md z-40 flex flex-col">
   <!-- Header -->
-<div class="flex items-center justify-between px-4 py-3 bg-white/90 backdrop-blur border-b border-gray-200 shadow-sm">
+<div class="flex items-center justify-between px-4 py-3 bg-white/90 backdrop-blur border-b border-gray-200 shadow-sm w-full">
   <!-- Business Logo + Name -->
-  <div class="flex items-center gap-2">
-    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="h-7 w-7 rounded-full object-cover shadow-sm" />
-    <h1 id="bizName" class="text-base font-semibold text-gray-800 whitespace-nowrap overflow-hidden text-ellipsis">
+  <div class="flex items-center gap-2 min-w-0">
+    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="h-6 w-6 sm:h-7 sm:w-7 rounded-full object-cover shadow-sm" />
+    <h1 id="bizName"
+        class="text-sm sm:text-base font-semibold text-gray-800 truncate max-w-[120px] sm:max-w-[160px]">
       YourBusiness
     </h1>
   </div>
-</div>
+
+
+
 
 
   <!-- Call to Action -->
