--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -12,18 +12,13 @@
     </div>
   </div>
 
-<!-- Call to Action -->
-<div class="px-4 py-3">
-  <button
-    class="w-full flex items-center justify-center gap-2 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-700 hover:to-blue-600 text-white text-sm font-medium px-4 py-2 rounded-lg shadow-md transition-all duration-200"
-  >
-    <!-- SVG Icon -->
-    <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4"/>
-    </svg>
-    <span>New Booking</span>
-  </button>
-</div>
+  <!-- Call to Action -->
+  <div class="px-4 py-3">
+    <button class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-4 py-2 rounded transition">
+      + Add Booking
+    </button>
+
+  </div>
 
   <!-- Navigation -->
   <nav class="flex-1 overflow-y-auto px-4 pb-4">
