Refactor Account section: dropdown with billing, security, and team switching

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -48,7 +48,7 @@
       </li>
 
       <!-- Clients -->
-      <li><a href="/admin/customers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🧑 Customers</a></li>
+      <li><a href="/admin/customers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🧑 Customer Management</a></li>
       <li><a href="/admin/leads" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">👥 Leads</a></li>
       <li><a href="/admin/tags" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🏷️ CRM Tags</a></li>
 
