Refactor Account section: dropdown with billing, security, and team switching

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -49,8 +49,7 @@
 
       <!-- Clients -->
       <li><a href="/admin/customers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🧑 Customer Management</a></li>
-      <li><a href="/admin/leads" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">👥 Leads</a></li>
-      <li><a href="/admin/tags" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🏷️ CRM Tags</a></li>
+      <li><a href="/admin/tags" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🏷️ CRM</a></li>
 
       <!-- Team -->
       <li><a href="/admin/providers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">💼 Providers</a></li>
@@ -67,6 +66,8 @@
         </button>
         <ul class="dropdown-menu hidden ml-4 space-y-1">
           <li><a href="/admin/marketing" class="block px-3 py-2 rounded hover:bg-gray-100">📊 Marketing Dashboard</a></li>
+          <li><a href="/admin/leads" class="block px-3 py-2 rounded hover:bg-gray-100">👥 Leads</a></li>
+
           <li><a href="/admin/campaigns" class="block px-3 py-2 rounded hover:bg-gray-100">🎯 Campaign Builder</a></li>
           <li><a href="/admin/automations" class="block px-3 py-2 rounded hover:bg-gray-100">⚙️ Automation Flows</a></li>
           <li><a href="/admin/retargeting" class="block px-3 py-2 rounded hover:bg-gray-100">🎯 Retargeting & Funnels</a></li>
@@ -79,7 +80,6 @@
           <li><a href="/admin/ai-marketing" class="block px-3 py-2 rounded hover:bg-gray-100">🤖 AI Copy Generator</a></li>
           <li><a href="/admin/ai-audience" class="block px-3 py-2 rounded hover:bg-gray-100">🧠 Smart Audience Builder</a></li>
           <li><a href="/admin/analytics" class="block px-3 py-2 rounded hover:bg-gray-100">📈 Campaign Analytics</a></li>
-          <li><a href="/admin/lead-tracking" class="block px-3 py-2 rounded hover:bg-gray-100">🕵️‍♂️ Lead Tracking</a></li>
         </ul>
       </li>
 
