Refactor Account section: dropdown with billing, security, and team switching

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -52,7 +52,7 @@
       <li><a href="/admin/tags" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🏷️ CRM</a></li>
 
       <!-- Team -->
-      <li><a href="/admin/providers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">💼 Providers</a></li>
+      <li><a href="/admin/providers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">💼 Providers Management</a></li>
      <!-- Staff Management Dropdown -->
 <li>
   <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
