Refactor Account section: dropdown with billing, security, and team switching

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -50,6 +50,27 @@
       <!-- Clients -->
       <li><a href="/admin/customers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🧑 Customer Management</a></li>
       <li><a href="/admin/tags" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🏷️ CRM</a></li>
+<!-- Websites & Forms Dropdown -->
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">🖥️ Websites & Forms</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+         stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
+    <li>
+      <a href="/admin/domains" class="block px-3 py-2 rounded hover:bg-gray-100">🌐 Domain Management</a>
+    </li>
+    <li>
+      <a href="/admin/forms" class="block px-3 py-2 rounded hover:bg-gray-100">📝 Forms Builder</a>
+    </li>
+    <li>
+      <a href="/admin/webpages" class="block px-3 py-2 rounded hover:bg-gray-100">🧾 Website Pages</a>
+    </li>
+  </ul>
+</li>
 
       <!-- Team -->
       <li><a href="/admin/providers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">💼 Providers Management</a></li>
