--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -71,10 +71,53 @@
     </li>
   </ul>
 </li>
+<!-- Inventory Management Dropdown -->
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">📦 Inventory Management</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+         stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
+    <li>
+      <a href="/admin/inventory" class="block px-3 py-2 rounded hover:bg-gray-100">📋 Inventory Dashboard</a>
+    </li>
+    <li>
+      <a href="/admin/products" class="block px-3 py-2 rounded hover:bg-gray-100">📦 Product Listings</a>
+    </li>
+    <li>
+      <a href="/admin/suppliers" class="block px-3 py-2 rounded hover:bg-gray-100">🏭 Suppliers</a>
+    </li>
+    <li>
+      <a href="/admin/stock-levels" class="block px-3 py-2 rounded hover:bg-gray-100">📊 Stock Levels</a>
+    </li>
+    <li>
+      <a href="/admin/purchase-orders" class="block px-3 py-2 rounded hover:bg-gray-100">🧾 Purchase Orders</a>
+    </li>
+    <li>
+      <a href="/admin/inventory-reports" class="block px-3 py-2 rounded hover:bg-gray-100">📈 Inventory Reports</a>
+    </li>
+  </ul>
+</li>
 
-      <!-- Team -->
-      <li><a href="/admin/providers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">💼 Providers Management</a></li>
-     <!-- Staff Management Dropdown -->
+   <!-- Providers Management Dropdown -->
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">💼 Providers Management</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+         stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
+    <li><a href="/admin/providers" class="block px-3 py-2 rounded hover:bg-gray-100">📋 View Providers</a></li>
+    <li><a href="/admin/providers/add" class="block px-3 py-2 rounded hover:bg-gray-100">➕ Add Provider</a></li>
+    <li><a href="/admin/providers/schedule" class="block px-3 py-2 rounded hover:bg-gray-100">📆 Provider Schedules</a></li>
+  </ul>
+</li>
+<!-- Staff Management Dropdown -->
 <li>
   <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
     <span class="flex items-center gap-2">🧑‍💼 Staff Management</span>
@@ -87,8 +130,12 @@
     <li><a href="/admin/staff" class="block px-3 py-2 rounded hover:bg-gray-100">👥 Staff</a></li>
     <li><a href="/admin/hire" class="block px-3 py-2 rounded hover:bg-gray-100">🤝 Hiring</a></li>
     <li><a href="/admin/scheduler" class="block px-3 py-2 rounded hover:bg-gray-100">⏱️ Scheduler</a></li>
+    <li><a href="/admin/shifts" class="block px-3 py-2 rounded hover:bg-gray-100">📆 Shifts</a></li>
+    <li><a href="/admin/checkin" class="block px-3 py-2 rounded hover:bg-gray-100">🕓 Check In / Out</a></li>
+    <li><a href="/admin/time-tracking" class="block px-3 py-2 rounded hover:bg-gray-100">📋 Time Tracking</a></li>
   </ul>
 </li>
+
 
 
 
