--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -81,27 +81,44 @@
     </svg>
   </button>
   <ul class="dropdown-menu hidden ml-4 space-y-1">
+
+    <!-- Dashboard -->
     <li>
       <a href="/admin/inventory" class="block px-3 py-2 rounded hover:bg-gray-100">📋 Inventory Dashboard</a>
     </li>
+
+    <!-- Products -->
+    <li class="px-3 pt-2 text-xs text-gray-500 uppercase tracking-wide">Products</li>
     <li>
       <a href="/admin/products" class="block px-3 py-2 rounded hover:bg-gray-100">📦 Product Listings</a>
     </li>
     <li>
-      <a href="/admin/suppliers" class="block px-3 py-2 rounded hover:bg-gray-100">🏭 Suppliers</a>
+      <a href="/admin/product-requests" class="block px-3 py-2 rounded hover:bg-gray-100">📝 Product Requests</a>
     </li>
+
+    <!-- Suppliers -->
+    <li class="px-3 pt-2 text-xs text-gray-500 uppercase tracking-wide">Suppliers</li>
+    <li>
+      <a href="/admin/suppliers" class="block px-3 py-2 rounded hover:bg-gray-100">🏭 Supplier Directory</a>
+    </li>
+
+    <!-- Stock -->
+    <li class="px-3 pt-2 text-xs text-gray-500 uppercase tracking-wide">Stock</li>
     <li>
       <a href="/admin/stock-levels" class="block px-3 py-2 rounded hover:bg-gray-100">📊 Stock Levels</a>
     </li>
     <li>
       <a href="/admin/purchase-orders" class="block px-3 py-2 rounded hover:bg-gray-100">🧾 Purchase Orders</a>
     </li>
+
+    <!-- Reports -->
+    <li class="px-3 pt-2 text-xs text-gray-500 uppercase tracking-wide">Reports</li>
     <li>
       <a href="/admin/inventory-reports" class="block px-3 py-2 rounded hover:bg-gray-100">📈 Inventory Reports</a>
     </li>
+
   </ul>
 </li>
-
    <!-- Providers Management Dropdown -->
 <li>
   <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
